# kaggle-pii-5th-place-solution

./: .gitignore  .pre-commit-config.yaml  README.md  download.sh  pyproject.toml
.github/workflows/: ruff.yaml  ruff_overwrite.yaml
config/: exp_058_train.yaml  exp_059_train.yaml  exp_078_train.yaml  exp_079_train.yaml  exp_082_train.yaml  exp_087.yaml  exp_087_.yaml  exp_087_train.yaml  exp_118_train.yaml  global.yaml
exp/: demo.ipynb  demo.py  demo2.ipynb
exp/data/output/082/: log_2024-10-21-11-48-55.txt
exp/data/output/118/: log_2024-10-21-11-23-44.txt  log_2024-10-21-11-26-23.txt
src/: main.py  main_1st.py
src/kaggle/: README.md  download.py  upload.py
src/model/: __init__.py  classify_model.py  detect_model.py  model.py
src/postprocess/: __init__.py  postprocess.py
src/preprocess/: __init__.py  data_provider.py  data_reader.py  utils.py  validation.py
src/train/: __init__.py  component_factory.py  dataloader.py  dataloader_utils.py  dataset.py  loss.py  optimizer.py  scheduler.py  train_utils.py  trainer.py
src/utils/: __init__.py  competition_utils.py  config.py  constant.py  data.py  eda.py  eda_.py  general_utils.py  logger.py  metric.py  metric_.py  timer.py  utils.py
