[project]
name = "kaggle-the-learning-agency-lab-pii-data-detection"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nocchi1", email = "" }
]
dependencies = [
    "numpy>=1.26.1",
    "pandas>=2.1.2",
    "polars>=0.19.12",
    "pyarrow>=14.0.0",
    "tqdm>=4.66.1",
    "kaggle==1.6.5",
    "matplotlib>=3.8.1",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.2",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "transformers>=4.37.2",
    "sentencepiece>=0.1.99",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.1",
    "ipykernel>=6.26.0",
    "lightgbm>=4.1.0",
    "xgboost>=2.0.1",
    "catboost>=1.2.2",
    "streamlit>=1.31.1",
    "iterative-stratification>=0.1.7",
    "loguru>=0.7.2",
    "python-slugify>=8.0.4",
    "omegaconf>=2.3.0",
    "spacy>=3.7.4",
    "spacy-alignments>=0.9.1",
    "nltk>=3.8.1",
    "requests==2.27.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_the_learning_agency_lab_pii_data_detection"]

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "third_party"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "B905",  # Zip-without-explicit-strict
    "E501",  # Line too long
    "F403",  # Unable to detect undefined names
    "N812",  # Lowercase imported as non-lowercase
    "N999",  # Invalid module name
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR2004",  # Magic value used in comparison
    "F401", # Unused-import
]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
